--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/mystyle.css">
+    <link rel="stylesheet" href="./assets/css/mystyle.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="container">
         <div class="card">
-            <img src="assets/img/laptop.png" alt="laptop">
+            <img src="./assets/img/laptop.png" alt="laptop">
             <h4>Laptop Gamer AMD</h4>
             <input type="number" name="cantidad" id="cantidad" placeholder="Cantidad">
             <input type="color" name="color" id="color">
@@ -28,7 +28,7 @@
         </div>
 
     </div>
-    <script src="assets/js/myscript.js"></script>
+    <script src="./assets/js/myscript.js"></script>
 </body>
 
 </html>
